# massive-csv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
massive-csv-cli/: Cargo.toml
massive-csv-cli/src/: format.rs  main.rs
massive-csv-core/: Cargo.toml
massive-csv-core/src/: editor.rs  error.rs  lib.rs  parser.rs  reader.rs  searcher.rs
massive-csv-core/tests/: integration.rs
massive-csv-napi/: Cargo.toml  index.d.ts  massive-csv.darwin-arm64.node  massive-csv.darwin-x64.node  package-lock.json  package.json
massive-csv-napi/src/: lib.rs
massive-csv-vscode/: .vscodeignore  esbuild.mjs  package-lock.json  package.json
massive-csv-vscode/media/: webview.html
massive-csv-vscode/native/: index.js
massive-csv-vscode/src/: backend.ts  csvEditorProvider.ts  extension.ts
